apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_type-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1236
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes:\n    [\"itf\".to_string()].into_iter().collect(), result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                id
            }
        }
        
extracted_scopes: {"itf"}
request scopes: ["itf"]
filtered:
{
  test
}

paths: ["/itf"]
