apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_type-3.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1261
expression: "TestResult\n{\n    query: QUERY2, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                }
                ... on B {
                    id
                }
            }
        }
        
extracted_scopes: {"a", "b", "c", "d", "itf"}
request scopes: []
filtered:
{
  test
}

paths: ["/itf"]
