apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_type-4.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1275
expression: "TestResult\n{\n    query: QUERY2, extracted_scopes: &extracted_scopes, scopes:\n    [\"itf\".to_string()].into_iter().collect(), result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                }
                ... on B {
                    id
                }
            }
        }
        
extracted_scopes: {"a", "b", "c", "d", "itf"}
request scopes: ["itf"]
filtered:
{
  test
}

paths: ["/itf/... on A", "/itf/... on B"]
