apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_type.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1222
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query {
            test
            itf {
                id
            }
        }
        
extracted_scopes: {"itf"}
request scopes: []
filtered:
{
  test
}

paths: ["/itf"]
