apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__scopes__tests__interface_typename.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
assertion_line: 1629
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

        query Anonymous {
            post(id: "1") {
              ... on PublicBlog {
                __typename
                title
              }
            }
          }
        
extracted_scopes: {}
request scopes: []
filtered:
query Anonymous {
  post(id: "1") {
    ... on PublicBlog {
      __typename
      title
    }
  }
}

paths: []
